--- a/backend/Express Server/package.json
+++ b/backend/Express Server/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-	"dev": "nodemon index.js "
+    "dev": "nodemon index.js "
   },
   "keywords": [],
   "author": "James Trowbridge",
@@ -14,7 +14,9 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
+    "http": "^0.0.1-security",
     "mongoose": "^8.4.1",
-    "nodemon": "^3.1.3"
+    "nodemon": "^3.1.3",
+    "vercel": "^32.3.0"
   }
 }
