--- a/backend/Express Server/package.json
+++ b/backend/Express Server/package.json
@@ -13,6 +13,7 @@
   "description": "backend web server node + express",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "http": "^0.0.1-security",
     "mongoose": "^8.4.1",
